src/manip_ws/log/build_2024-05-18_17-55-07/manip_pkg/stderr.log
  File "/home/wall-e/Desktop/manip_ws/install/manip_pkg/lib/python3.10/site-packages/manip_pkg/main_node.py", line 38
    self.get_logger().info('Im here')
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

